--- a/en/editor/cli.html
+++ b/en/editor/cli.html
@@ -18,7 +18,7 @@ sanny.exe --compile C:\myscm.txt C:\myscm.scm
 ```
 
 {% hint style="info" %}
-The `output file path`_ _parameter is optional. If there is no output path parameter, the compiler uses the [format rules](options/formats.md#file-name-format) to compute the output file name. 
+The `output file path` parameter is optional. If there is no output path parameter, the compiler uses the [format rules](options/formats.md#file-name-format) to compute the output file name. 
 {% endhint %}
 
 {% hint style="info" %}
@@ -55,7 +55,7 @@ sanny.exe --game sa
 
 ## --mode
 
-`--mode &lt;id&gt;` - selects the mode by `id`. [Modes](../../edit-modes/README.html) and their ids are defined in the `modes.xml` file.
+`--mode &lt;id&gt;` - selects the mode by `id`. [Modes](../../edit-modes/README.md) and their ids are defined in the `modes.xml` file.
 
 Shortcut: `-m`
 
@@ -85,7 +85,7 @@ sanny.exe -x ..\my-modes.xml
 Available since v3.8.0
 {% endhint %}
 
-`-o &lt;option name&gt; &lt;value&gt;` - sets the value of the specified [option](options/). To set multiple options, list each of them individually:
+`-o &lt;option name&gt; &lt;value&gt;` - sets the value of the specified [option](options//README.md). To set multiple options, list each of them individually:
 
 `-o &lt;option1 name&gt; &lt;option1 value&gt; -o &lt;option2 name&gt; &lt;option2 value&gt; ... -o &lt;optionN name&gt; &lt;optionN value&gt;` 
 
