--- a/en/editor/features.html
+++ b/en/editor/features.html
@@ -31,9 +31,9 @@ Clicking the library version text in the status bar brings up a popup menu from 
 
 Sanny Builder's look and feel can be customized with themes. They define colors and style of the interface and code elements for easier reading. The active color theme can be changed in the [options](options/editor.md#color-theme). 
 
-<div class="info">
+:::info
 If you launch Sanny Builder v3.8.0 with `settings.ini` from a prior version, your syntax highlighting configuration will be converted to a custom user theme (stored in`themes\custom.ini`).
-</div>
+:::
 
 Also Sanny Builder has a built-in [theme editor](options/theme-editor.md) for quick customization of the existing themes.
 
@@ -137,7 +137,7 @@ If a `SCM` file contains custom-made missions you may edit the `missions.txt` to
 
 ## Multilingual Interface
 
-Sanny Builder has fully multilingual interface translated into 15 languages. You can switch the languages in the [options](options/general.md#interface-language) (`F10`). Refer to [sannybuilder/translations](https://github.com/sannybuilder/translations) for more information on how to create or update a translation.
+Sanny Builder has fully multilingual interface translated into 17 languages. You can switch the languages in the [options](options/general.md#interface-language) (`F10`). Refer to [sannybuilder/translations](https://github.com/sannybuilder/translations) for more information on how to create or update a translation.
 
 ## External Tools Menu
 
