--- a/es/editor/hotkeys.html
+++ b/es/editor/hotkeys.html
@@ -9,190 +9,194 @@
 </head>
 <body>
 
-Sanny Builder supports many common shortcuts for the file and text operations (`Ctrl+N`, `Ctrl+Z`, etc) as well as some custom ones.  Hotkeys marked with `*` are [customizable](options/hotkeys.md).
+Sanny Builder soporta muchos atajos comunes para las operaciones de archivo y texto (`Ctrl+N`, `Ctrl+Z`, etc.), así como algunos personalizados. Las teclas de acceso rápido marcadas con `*` son [personalizables](options/hotkeys.md).
 
 <table>
 <thead>
 <tr>
-<th>Key/Combo</th>
-<th>Operation</th>
+<th>Tecla/Combo</th>
+<th>Operación</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td> **Main Menu**</td>
+<td>**Menu Principal**</td>
 <td></td>
 </tr>
 <tr>
-<td> `F5` *</td>
-<td>open a file as a script and disassemble</td>
+<td>`F5` *</td>
+<td>abrir un archivo como un script y desensamblar</td>
 </tr>
 <tr>
-<td> `F6` *</td>
-<td>compile the editor content to a script file</td>
+<td>`F6` *</td>
+<td>compilar el contenido del editor en un archivo de script</td>
 </tr>
 <tr>
-<td> `F7` *</td>
-<td>compile the editor content to a script file and copy it to the game&#39;s scripts directory</td>
+<td>`F7` *</td>
+<td>compila el contenido del editor en un archivo de script y cópialo en el directorio de scripts del juego</td>
 </tr>
 <tr>
-<td> `F8` *</td>
-<td>run the game for the current [edit mode](../../edit-modes/README.md)</td>
+<td>`F8` *</td>
+<td>ejecutar el juego para el [modo de edición](../../edit-modes/README.md) actual</td>
 </tr>
 <tr>
-<td> `F10`</td>
-<td>open the [options](options/README.md) window</td>
+<td>`F10`</td>
+<td>abrir la ventana de [opciones](options/README.md)</td>
 </tr>
 <tr>
-<td> `F12`</td>
-<td>open the documentation</td>
+<td>`F12`</td>
+<td>abrir la documentación</td>
 </tr>
 <tr>
-<td> **Text**</td>
+<td>**Texto**</td>
 <td></td>
 </tr>
 <tr>
-<td> `TAB`, `Shift`+`TAB`</td>
-<td>indent the selected text to the left / right (tab)</td>
+<td>`TAB`, `Shift` + `TAB`</td>
+<td>sangrar el texto seleccionado a la izquierda/derecha (tabulador)</td>
 </tr>
 <tr>
-<td><p>`Ctrl`+`Alt`+`A`</p><p>`Ctrl`+`Alt`+`D`</p></td>
-<td>indent the selected text to the left / right (by one character)</td>
+<td>`Ctrl` + `Alt` + `A`\
+`Ctrl` + `Alt` + `D`</td>
+<td>Sangrar el texto seleccionado a la izquierda/derecha (por un carácter)</td>
 </tr>
 <tr>
-<td><p>`Ctrl`+`Alt`+`B`</p><p>`Ctrl`+`Alt`+`N`</p><p>`Ctrl`+`Alt`+`M`</p></td>
-<td>toggle different modes of the text selection: Normal, Columnar (same as selection with pressed `Alt`), Lines</td>
+<td>`Ctrl` + `Alt` + `B`\
+`Ctrl` + `Alt` + `N`\
+`Ctrl` + `Alt` + `M`</td>
+<td>alternar diferentes modos de selección de texto: Normal, Columnar (igual que la selección con `Alt` presionado), Líneas</td>
 </tr>
 <tr>
-<td><p>`Ctrl`+`Shift`+`U`</p><p>`Ctrl`+`Shift`+`L`</p></td>
-<td>convert the word to uppercase / lowercase</td>
+<td>`Ctrl` + `Shift` + `U`\
+`Ctrl` + `Shift` + `L`</td>
+<td>convertir la palabra a mayúsculas/minúsculas</td>
 </tr>
 <tr>
-<td> `Ctrl`+`+`</td>
-<td>increase the text size (zoom in)</td>
+<td>`Ctrl` + `+`</td>
+<td>aumentar el tamaño del texto (acercar)</td>
 </tr>
 <tr>
-<td> `Ctrl`+`-`</td>
-<td>decrease the text size (zoom out)</td>
+<td>`Ctrl` + `-`</td>
+<td>disminuir el tamaño del texto (alejar)</td>
 </tr>
 <tr>
-<td> `Ctrl`+`T`</td>
-<td>delete the word under the cursor</td>
+<td>`Ctrl` + `T`</td>
+<td>eliminar la palabra debajo del cursor</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Y`</td>
-<td>delete the line</td>
+<td>`Ctrl` + `Y`</td>
+<td>eliminar la línea</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Shift`+`Y`</td>
-<td>clear the line</td>
+<td>`Ctrl` + `Shift` + `Y`</td>
+<td>limpiar la línea</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Q` *</td>
-<td>[comment / uncomment](../coding/comments.md) the line</td>
+<td>`Ctrl` + `Q` *</td>
+<td>[comentar/descomentar](../coding/comments.md) la línea</td>
 </tr>
 <tr>
-<td> **Navigation**</td>
+<td>**Navegación**</td>
 <td></td>
 </tr>
 <tr>
-<td> `Ctrl`+`Shift`+`B`</td>
-<td>jump between brackets: `{}`, `()`, `&lt;&gt;`, `[]`</td>
+<td>`Ctrl` + `Shift` + `B`</td>
+<td>saltar entre paréntesis: `{}`, `()`, `&lt;>`, `[]`</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Up/Down`</td>
-<td>scroll the page one line up / down</td>
+<td>`Ctrl` + `Up/Down`</td>
+<td>desplazar la página una línea hacia Arriba/Bajo</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Mouse Wheel Up/Down`</td>
-<td>page up / down</td>
+<td>`Ctrl` + `Rueda del Ratón Arriba/Bajo`</td>
+<td>pagina Arriba/Bajo</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Shift`+`0..9`</td>
-<td>toggle a <a href="features.md#bookmarks-quick-jump">bookmark</a> on the line</td>
+<td>`Ctrl` + `Shift` + `0..9`</td>
+<td>alternar un [marcador](features.md#bookmarks-quick-jump) en la línea</td>
 </tr>
 <tr>
-<td> `Ctrl`+`0..9`</td>
-<td>navigate to line with the <a href="features.md#bookmarks-quick-jump">bookmark</a></td>
+<td>`Ctrl` + `0..9`</td>
+<td>navegar hasta la línea con el [marcador](features.md#bookmarks-quick-jump)</td>
 </tr>
 <tr>
-<td> `Ctrl`+`G` *</td>
-<td>go to the line</td>
+<td>`Ctrl` + `G` *</td>
+<td>ir a la línea</td>
 </tr>
 <tr>
-<td> `Alt`+`Right` *</td>
-<td><a href="features.md#navigate-to-symbol">navigate to symbol</a> under the cursor (a label, mission or function)</td>
+<td>`Alt` + `Right` *</td>
+<td>[navegar al símbolo](features.md#navigate-to-symbol) debajo del cursor (una etiqueta, misión o función)</td>
 </tr>
 <tr>
-<td> `Alt`+`Left` *</td>
-<td>navigate back to the previous position (where <a href="features.md#navigate-to-symbol">Navigate to Symbol</a> was called)</td>
+<td>`Alt` + `Left` *</td>
+<td>navegar de regreso a la posición anterior (donde se llamó a [Navegar a símbolo](features.md#navigate-to-symbol))</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Enter`</td>
-<td>open a file which name is under the cursor (see also <a href="../coding/directives.md#usdinclude">relative path priorities</a>)</td>
+<td>`Ctrl` + `Enter`</td>
+<td>abra un archivo cuyo nombre esté bajo el cursor (vea también [prioridades relativas de la ruta](../coding/directives.md#$include))</td>
 </tr>
 <tr>
-<td> **Code**</td>
+<td>**Código**</td>
 <td></td>
 </tr>
 <tr>
-<td> `Ctrl`+`Space`</td>
-<td>show the list of classes / class members / models / labels / variables / missions</td>
+<td>`Ctrl` + `Space`</td>
+<td>mostrar la lista de clases, miembros, modelos, etiquetas, variables y misiones</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Shift`+`Space`</td>
-<td>show the list of parameters for the current class command</td>
+<td>`Ctrl` + `Shift` + `Space`</td>
+<td>mostrar la lista de parámetros para el comando de clase actual</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Shift`+`C` *</td>
-<td>insert the <a href="features.md#player-coordinates-management">player&#39;s coordinates</a></td>
+<td>`Ctrl` + `Shift` + `C` *</td>
+<td>inserta las [coordenadas del jugador](features.md#player-coordinates-management)</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Shift`+`E` *</td>
-<td>insert the <a href="features.md#player-coordinates-management">player&#39;s z_angle</a></td>
+<td>`Ctrl` + `Shift` + `E` *</td>
+<td>insert the <a href="features.md#player-coordinates-management">player's z_angle</a></td>
 </tr>
 <tr>
-<td> `F1`</td>
+<td>`F1`</td>
 <td>find an opcode with the word under the cursor (with ignoring of `_` and `.`)</td>
 </tr>
 <tr>
-<td> `Ctrl`+`F1`</td>
+<td>`Ctrl` + `F1`</td>
 <td>find an opcode with the word under the cursor (without ignoring of `_` and `.`)</td>
 </tr>
 <tr>
-<td> `F2`</td>
+<td>`F2`</td>
 <td>use the word under the cursor to expand to the <a href="../../edit-modes/code-templates.md">code template</a> with the same name</td>
 </tr>
 <tr>
-<td> `Ctrl`+`J`</td>
+<td>`Ctrl` + `J`</td>
 <td>show the list of <a href="../../edit-modes/code-templates.md">code templates</a></td>
 </tr>
 <tr>
-<td> `Ctrl`+`M`</td>
+<td>`Ctrl` + `M`</td>
 <td>start/stop recording of a <a href="features.md#keypress-recording-macro">macro </a>(keystroke pressings sequence)</td>
 </tr>
 <tr>
-<td> `Ctrl`+`P`</td>
+<td>`Ctrl` + `P`</td>
 <td>replay <a href="features.md#keypress-recording-macro">macro</a>/pause while processing</td>
 </tr>
 <tr>
-<td> `Ctrl`+`H` *</td>
+<td>`Ctrl` + `H` *</td>
 <td>convert the number under the cursor from decimal to hexadecimal and vice versa</td>
 </tr>
 <tr>
-<td> `Ctrl`+`Alt`+`H` *</td>
+<td>`Ctrl` + `Alt` + `H` *</td>
 <td>convert the model name under the cursor to its numeric ID and vice versa</td>
 </tr>
 <tr>
-<td> **Misc**</td>
+<td>**Misc**</td>
 <td></td>
 </tr>
 <tr>
-<td> `Ctrl`+`~`</td>
+<td>`Ctrl` + `Ñ`</td>
 <td>open <a href="console.md">console</a></td>
 </tr>
 <tr>
-<td> `Alt`+`S`</td>
+<td>`Alt` + `S`</td>
 <td>(when the list of models is active) re-sort the list</td>
 </tr>
 </tbody>
